test/expected/explain_uwt.out
explain unsigned wchar_t x
        ^
9: error: "unsigned wchar_t" is illegal for built-in type
